# elin-yar-craft

./: .editorconfig  .gitignore  Check.mk  Makefile  README.md  elin-yar-craft.sln  pyproject.toml  workshop_desc.txt  yarcraft.toml  yarcraft_accessory.toml  yarcraft_armor.toml  yarcraft_weapon.toml
.github/: labels.toml
.github/workflows/: config-gh-labels.yml  simple_label.yml
Yar_Craft/: EDEFW_Thing_YarCraft.csv  EDEFW_Thing_YarCraft_Accessory.csv  EDEFW_Thing_YarCraft_Armor.csv  EDEFW_Thing_YarCraft_Weapon.csv  EDEFW_Thing_YarCraft_deprecated.csv  README.md  package.xml
Yar_Craft_CN/: EDEFW_Thing_YarCraft_Accessory.csv  EDEFW_Thing_YarCraft_Armor.csv  EDEFW_Thing_YarCraft_Weapon.csv  EDEFW_Thing_YarCraft_deprecated.csv  README.md  package.xml
Yar_Craft_ZHTW/: EDEFW_Thing_YarCraft_Accessory.csv  EDEFW_Thing_YarCraft_Armor.csv  EDEFW_Thing_YarCraft_Weapon.csv  EDEFW_Thing_YarCraft_deprecated.csv  package.xml
docs/: cost_design.md  workshop_desc.txt  workshop_desc_cn.txt  workshop_desc_en.txt  workshop_desc_zhtw.txt
document_template/: workshop_desc.txt  workshop_desc_cn.txt  workshop_desc_en.txt  workshop_desc_zhtw.txt
src/csharp/: Console.cs  IdReplacer.cs  Plugin.cs  Walker.cs  Yar_Craft.csproj
src/csharp/Properties/: AssemblyInfo.cs
src/elin_yar_craft/: document.py  translate.py  update_deprecated.py  yarcraft.py
